--- a/client/index.html
+++ b/client/index.html
@@ -21,17 +21,18 @@
         <li> I can get a list of the most recently submitted search strings.</li>
       </ol>
     <div>
-       <h3> Example creation usage:</h3>
+       <h3> Example Search usage:</h3>
 <code>https://floating-chamber-51490.herokuapp.com/api/imagesearch/blue?offset=4</code><br/>
-<code>https://floating-chamber-51490.herokuapp.com/api/latest/imagesearch</code>
 <h3>Example Search output</h3>
 <code>{
-"url": "https://farm5.staticflickr.com/4260/35144528785_060cc63125.jpg",
-"snippet": "bluesfestival2017zoetermeer039-sugar queen the straight blues band usa-be",
-"thumbnail": "https://farm5.staticflickr.com/4260/35144528785_060cc63125_t.jpg",
-"context": "https://www.flickr.com/photos/37169520@N06/35144528785"
-},
+"url": "https://farm5.staticflickr.com/4260/35144528785_060cc63125.jpg",</code>
+<code>"snippet": "bluesfestival2017zoetermeer039-sugar queen the straight blues band usa-be",</code>
+<code>"thumbnail": "https://farm5.staticflickr.com/4260/35144528785_060cc63125_t.jpg",</code>
+<code>"context": "https://www.flickr.com/photos/37169520@N06/35144528785"
+}
 </code>
+  <h3> Example Recent Search usage:</h3>
+<code>https://floating-chamber-51490.herokuapp.com/api/latest/imagesearch</code>
 <h3>Example Recent Search output</h3>
 <code>{
 "term": "dogs",
